name:                GameOfLife
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE.txt
author:              Lukasz Patalas
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable GameOfLife
  main-is:             GameOfLife.hs
  -- other-modules:       
  build-depends:       base ==4.5.*